arm: dts: imx28: add device tree for TQ Energy Manager EM310
Signed-off-by: Christoph Krutz <christoph.krutz@tq-group.com>
Signed-off-by: Matthias Schiffer <matthias.schiffer@tq-group.com>
Signed-off-by: Michael Krummsdorf <michael.krummsdorf@tq-group.com>
Signed-off-by: Michael Krummsdorf <michael.krummsdorf@ew.tq-group.com>

--- a/Documentation/devicetree/bindings/arm/fsl.yaml
+++ b/Documentation/devicetree/bindings/arm/fsl.yaml
@@ -103,6 +103,11 @@ properties:
           - const: i2se,duckbill-2
           - const: fsl,imx28
 
+      - description: TQ-Systems i.MX28 based board EM310
+        items:
+          - const: tq,em310
+          - const: fsl,imx28
+
       - description: i.MX31 based Boards
         items:
           - enum:
